--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,9 @@
 #root {
-  /* background: rgb(0, 90, 102);
-  background: linear-gradient(
-    122deg,
-    rgba(0, 90, 102, 1) 0%,
-    rgba(68, 104, 242, 1) 70%
-  ); */
-  background-color: #4468f2;
+  background-color: hsl(228, 87%, 61%);
   text-align: center;
 }
 
 .dash-board {
-  width: 100vw;
   height: 90vh;
   display: flex;
   flex-direction: row;
@@ -21,7 +14,9 @@
 .dash-content {
   padding: 100px;
 }
-
+.dash-image {
+  padding: 0px 0px 20px 10px;
+}
 .dash-image > img {
   width: 50vw;
   height: auto;
@@ -111,4 +106,34 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+}
+
+.nav-bar {
+  font-size: 2rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 30px;
+}
+
+.links li {
+  display: inline;
+  margin: 10px;
+}
+
+.link {
+  color: white;
+  position: relative;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.link:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.link:active {
+  box-shadow: none;
+  top: 5px;
 }
