--- a/src/App.css
+++ b/src/App.css
@@ -137,3 +137,45 @@
   box-shadow: none;
   top: 5px;
 }
+.popup-box {
+  position: fixed;
+  background: #00000050;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  justify-content: center;
+  align-items: center;
+}
+ 
+.box {
+  position: relative;
+  width: 40%;
+  margin: auto;
+  height: auto;
+  max-height: auto;
+  margin-top: calc(100vh - 85vh - 20px);
+  background: #fff;
+  border-radius: 20px;
+  padding: 20px;
+  padding-left: 50px;
+  border: 1px solid #999;
+  justify-content: center;
+  align-items: center;
+}
+ 
+.close-icon {
+  content: 'x';
+  cursor: pointer;
+  position: fixed;
+  right: calc(29.8% - 30px);
+  top: calc(102vh - 85vh - 33px);
+  background: #ededed;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  line-height: 20px;
+  text-align: center;
+  border: 1px solid #999;
+  font-size: 20px;
+}
